<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3"
            android:background="@drawable/bg_gradient"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TxtHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_mobile" />

            <TextView
                style="@style/TxtNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14dp"
                android:text="@string/req_mobile_number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7"
            android:gravity="center"
            android:background="@android:color/white"
            android:orientation="vertical">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="India (+91)"
                android:gravity="center"
                android:focusable="false"
                android:drawableLeft="@drawable/ic_country"
                android:drawableStart="@drawable/ic_country" />
            <EditText
                android:id="@+id/edtMobileNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:maxLength="10"
                android:inputType="phone"
                android:layout_marginTop="@dimen/_16dp"
                android:hint="@string/hint_mobile_number"
                android:drawableLeft="@drawable/ic_call"
                android:drawableStart="@drawable/ic_call" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify"
                android:ems="9"
                style="@style/Widget.AppCompat.Button.Colored"
                android:drawableRight="@android:drawable/ic_menu_send"
                android:layout_marginTop="@dimen/_22dp"
                android:drawableEnd="@android:drawable/ic_menu_send" />
        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_otp"
        app:layout_anchor="@id/ll_top"
        app:backgroundTint="@color/colorWhite"
        app:layout_anchorGravity="bottom|center" />
</android.support.design.widget.CoordinatorLayout>
