<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:background="@drawable/bg_gradient"
        android:gravity="center">

        <TextView
            style="@style/TxtHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16dp"
            android:gravity="center"
            android:text="We would like to know more about you :)" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:padding="@dimen/_16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInpLayFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edtFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_first_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="20"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInpLayLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/edtLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_last_name"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:maxLength="20"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_8dp"
                    android:src="@drawable/ic_email"
                    android:paddingEnd="@dimen/_8dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInpLayEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_8dp"
                    android:src="@drawable/ic_location"
                    android:paddingEnd="@dimen/_8dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInpLayCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_city"
                        android:maxLines="1"
                        android:inputType="textCapWords"
                        android:maxLength="20"
                        android:imeOptions="actionNext"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_4dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="@dimen/_8dp"
                    android:src="@drawable/ic_country"
                    android:paddingEnd="@dimen/_8dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/txtInpLayCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_country"
                        android:maxLines="1"
                        android:inputType="textCapWords"
                        android:maxLength="20"
                        android:imeOptions="actionDone"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/_16dp"
        android:text="Proceed"/>
</LinearLayout>